-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.5.1
-
Fix Version/s: 5.5.1
-
Component/s: GUI: Basic Input System (keyboard, mouse, touch)
-
Labels:
-
Environment:Win 7 x64
MinGW 5.1
Qt 5.5
QtCreator 3.4.2 or 3.5.0-beta1
-
Commits:b098f8344440e300544b5bca3358f6f2097d71ca
The toggle comment shortcut is Ctrl + /, with the german keyboard layout this translates to Crtl + Shift + 7.
Everything worked fine until I upgraded last week to MinGW 5.1, Qt 5.5 and QtCreator 3.4.2
I don't know which upgrade is responsible.
If I change the layout to the english, the shortcut works perfect. But there is no need to press shift for a /.
But similar the increase font size shortcut is broken (in both layouts, but only in the english one it needs a shift).
Shortcuts which need directly a shift are working as expected.
- is duplicated by
-
QTCREATORBUG-15023 Commenting shortcut doesn't work in French keyboard
-
- Closed
-
- is required for
-
QTBUG-46863 Issues to be fixed before Qt 5.5.1
-
- Closed
-
- relates to
-
QTBUG-51848 Keyboard Shortcuts CTRL+[, CTRL+], CTRL+{, CTRL+} not working on german keyboard
-
- Open
-
-
QTBUG-47062 [REG: 5.4.2->5.5.0] Shortcuts do not work correctly, especially when SHIFT is utilized either as a modifier or implicitly
-
- Closed
-
-
QTBUG-48558 [Reg: 5.5.1->5.6] Modifier state gets lost when pressing shortcut
-
- Closed
-
-
QTBUG-50395 [REG 5.5.1 -> 5.6] Shortcuts needing implicit shift broken
-
- Closed
-
-
QTBUG-50772 Key event and shortcut handling cleanup
-
- Reported
-
- replaces
-
QTCREATORBUG-14665 UnCommentSection does not work with German keyboard layout
-
- Closed
-
-
QTCREATORBUG-14683 [REG 3.4.1 -> 3.4.2] Comment/Uncomment shortcut does not work with Finnish keyboard layout
-
- Closed
-
-
QTCREATORBUG-14778 shortcut to comment code doesn't work anymore
-
- Closed
-
-
QTCREATORBUG-14793 <strg> + "/" does not work anymore
-
- Closed
-
-
QTCREATORBUG-14795 Block-comment hotkay CTRL-/ does not work in QtCteator 3.4.2
-
- Closed
-
-
QTCREATORBUG-14861 [REG 3.4->3.5] Selecting text until end of block is broken
-
- Closed
-
-
QTCREATORBUG-14908 Keybord Sequence crtl + shift + "/" ; German keyboard
-
- Closed
-
-
QTCREATORBUG-14924 Shortcut for comment toggle stopped working
-
- Closed
-
-
QTCREATORBUG-14953 "Alt+Shift+," aka "Alt+<" key combination is broken
-
- Closed
-
-
QTCREATORBUG-15166 Linux 64-bit: Toggle comment shortcut (ctrl+/) does not work with keyboard layout requiring to press ctrl+shift+7
-
- Closed
-