Fix global modifiers state after triggering shortcuts

When using for example alt-tab in Qt Creator, the list of recent documents
is kept open as long as alt is pressed. The new
tryHandleShortcutOverrideEvent(QWindow *w, QKeyEvent *ev) function failed
to record the modifier state (contrary to the other overloads).

Change-Id: Ia0fc5d1ff486aa5aac7e25b41acb972dcb6dbf7d
Task-number: QTBUG-47122
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>

cregit: b098f8344440e300544b5bca3358f6f2097d71ca https://github.com/qt/qtbase/commit/b098f8344440e300544b5bca3358f6f2097d71ca